# Global-Lectures

./: .gitignore  Dockerfile.base  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/data/df30a4f4-df09-4f63-9400-91e6ccc5cddf/: src_subtitle.json  tar_subtitle.json
backend/src/: config.py  main.py  path_manager.py
backend/src/auth/: authenticate.py  authentication.py  hash_handler.py  jwt_handler.py
backend/src/database/: __init__.py  postgres.py  repositories.py  s3_handler.py  tables.py  unit_of_work.py
backend/src/db/: __init__.py  aws_handler.py  postgres.py  transactions.py  user.py  video.py  video_language.py
backend/src/models/: postgres.py  registry.py  repositories.py  s3_handler.py  stt.py  tables.py  translator.py  tts.py  unit_of_work.py
backend/src/routes/: analysis.py  auth.py  dub.py  dubbing.py  dubbing_1.py  user.py  video.py
backend/src/schema/: analysis.py  user.py  video.py
backend/src/schemas/: auth.py  video.py
backend/src/services/: auth.py  dub.py  dubbing.py  stt.py  translator.py  user.py
backend/src/utils/: audio.py  path.py  video_processor.py
backend/src/utils/audio/: audio.py
backend/src/utils/audio/cmd/: demucs.py  sox.py  (+1 more)
backend/src/utils/cmd/: demucs.py  ffmpeg.py  sox.py
backend/src/utils/pipelines/: base_stage.py  dubbing_stages.py  pipeline.py  setup_stages.py  tts.py
backend/src/worker/: dubbing.py
backend/src/workers/: celery.py
tts-server/: Dockerfile  pyproject.toml
tts-server/src/: main.py  test.py
tts-server/src/models/: basemodel.py  registry.py  tts.py
(+89 files in other folders)
