[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.38.23",
    "cutlet>=0.5.0",
    "elevenlabs>=2.1.0",
    "fastapi>=0.115.12",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.40",
    "transformers>=4.51.3",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.34.2",
    "whisperx",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }
