[project]
name = "tts-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "transformers==4.33.0",
    "tts>=0.22.0",
    "uvicorn>=0.35.0",
]
